SAK-16188 merge to trunk
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@68563 66ffb92e-73f9-0310-93c1-f5514f145a0a